# mood-maestro

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.README.md  docker-compose.yml  pyproject.toml
scripts/: README.md  __init__.py  create_final_dataset.py  models.py  set_db.py  set_entities_collection.py  set_tracks_collection.py  set_users_collection.py
src/mood_maestro/: __init__.py
src/mood_maestro/agents/: agent_manager.py  config.py  tools.py  tools_new.py
src/mood_maestro/app/: main.py  schemas.py  services.py
src/mood_maestro/core/: models.py
tests/: test_azure_openai.py  test_main.py
