[project]
name = "mood-maestro"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "autogen[azure]>=0.9.9",
    "fastapi[all]>=0.117.1",
    "openai>=1.109.1",
    "pymongo>=4.15.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "pandas>=2.3.3",
    "pytest>=8.4.2",
]
lint = [
    "pre-commit>=4.3.0",
    "ruff>=0.13.2",
]

[tool.ruff]
target-version = "py312"

exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    "build",
    "dist",
]
